Fix overflow table in Content view

--- a/theme/themes/pastanaga/extras/contents.less
+++ b/theme/themes/pastanaga/extras/contents.less
@@ -66,6 +66,18 @@
     top: 3px;
   }
 
+  .contents-table-wrapper {
+    width: 100%;
+    overflow-x: auto;
+
+    .ui.attached.table {
+      width: 100%;
+      max-width: 100%;
+
+      border: none;
+    }
+  }
+
   .ui.table .icon-align,
   .ui.dropdown .menu > .item.icon-align {
     display: flex;
